--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     
     <div class="text-left">
 
-        <h1 class="display-4">Hello!</h1>
+        <h1 class="display-4">Choose action:</h1>
         @*
         @using (Html.BeginForm(FormMethod.Post))
         {
