--- a/Views/Database/Adddatabase.cshtml
+++ b/Views/Database/Adddatabase.cshtml
@@ -20,6 +20,7 @@
         
     </ul>
     <form>
-        <button name="powrot" value="powrot" asp-action="powrot">Back to home page</button>
+        <button asp-controller="Database" name="powrot2" value="powrot2" asp-action="powrot2">Back to home page</button>
+        
     </form>
 </div>
